# thentos

./: .gitignore  .gitmodules  .travis.yml  FUTUREWORK.md  HLint.hs  LICENSE  Makefile  README.md  bcrypt-test.py  cabal.config  devel.config  devel.config-a3-sample  index.html  notes.txt  stack.yaml  thentos.cabal
.travis/: build-cache.sh  install.sh  script.sh
bench/: Main.hs  Util.hs
docs/: dev-howtos.md  load_testing.md  load_testing.txt  messaging.md  related_work.md  release_management.md  release_strategy.md  styleguide.md  sybil.md  terminology.md  thentos-captcha-README.md
exec/: BuildDocs.hs  Main.hs
foo/: bower.json
foo/src/: Main.purs
gh-pages/: index.html
misc/: \  bump-version.sh  get-cabal-config.sh  hspec-depend.sh  release.sh  thentos-install.hs  thentos-install.sh
refresh-i18n/: refresh-i18n.cabal
refresh-i18n/src/: Main.hs
servant-session/: CHANGELOG.md  LICENSE  README.md  servant-session.cabal
servant-session/src/Servant/: Session.hs
servant-session/test/Servant/: SessionSpec.hs
services/helloworld/: cabal.config  devel.config  helloworld.cabal
services/helloworld/src/: Site.hs
services/helloworld/static/: screen.css
src/: Api.hs  Config.hs  DB.hs  Doc.hs  Frontend.hs  Main.hs  Thentos.hs  Types.hs  Util.hs
tests/: MetaSpec.hs  Spec.hs  TestMain.hs  ThentosSpec.hs
thentos-adhocracy/: Makefile  devel.config  thentos-adhocracy.cabal
thentos-adhocracy/exec/: BuildDocs.hs  Main.hs
thentos-adhocracy/schema/: schema-a3.sql
thentos-adhocracy/src/: Paths_thentos_adhocracy__.hs
thentos-adhocracy/src/Thentos/: Adhocracy3.hs
thentos-adhocracy/src/Thentos/Adhocracy3/: Action.hs  Transactions.hs  Types.hs
thentos-adhocracy/src/Thentos/Adhocracy3/Action/: Types.hs  Unsafe.hs
thentos-adhocracy/src/Thentos/Adhocracy3/Backend/: Core.hs
thentos-adhocracy/src/Thentos/Adhocracy3/Backend/Api/: Proxy.hs  Simple.hs  Sso.hs  sso.txt
thentos-adhocracy/src/Thentos/Adhocracy3/Backend/Api/Docs/: Simple.hs
thentos-adhocracy/tests/Thentos/Adhocracy3/Backend/Api/: ProxySpec.hs  SimpleSpec.hs
thentos-cookie-session/: HLint.hs  thentos-cookie-session.cabal
thentos-cookie-session/src/Control/Monad/Except/: Missing.hs
thentos-cookie-session/src/Servant/: Missing.hs
thentos-cookie-session/src/Thentos/: CookieSession.hs
thentos-cookie-session/src/Thentos/CookieSession/: CSRF.hs  Except.hs  Servant.hs  Types.hs
thentos-cookie-session/src/Thentos/Frontend/Session/: Types.hs
thentos-cookie-session/test/Thentos/: CookieSessionSpec.hs
thentos-core/: .gitignore  HLint.hs  Makefile  Setup.hs  build-js.sh  cabal.config-7.8.4  devel.config  example.config  mkcap.hs  package.yaml  thentos-core.cabal
thentos-core/bench/: Main.hs
thentos-core/exec/: BuildDocs.hs  Captcha.hs  ImportA3Users.hs  ImportAulaUsers.hs  Main.hs
thentos-core/frontend/static/: screen.css
thentos-core/purescript/: bower.json  build-js.sh
thentos-core/purescript/src/: Main.purs
thentos-core/purescript/test/: Main.purs
thentos-core/purescript/test-foo/: test_server.py  tests.js
thentos-core/resources/fonts/: LICENSE_INFO
thentos-core/schema/: schema.sql  wipe.sql
thentos-core/src/: Paths.hs  Paths_thentos_core.hs  Paths_thentos_core__.hs  Thentos.hs  ThentosDocs.hs  mkcap.hs
thentos-core/src-devel/: Paths_thentos_core.hs  cabal_macros.h
thentos-core/src-devel-/: Paths_thentos_core.hs  Paths_thentos_core_aux.hs
thentos-core/src/Data/Csv/: Missing.hs
thentos-core/src/Database/PostgreSQL/Simple/: Missing.hs
thentos-core/src/LIO/: Missing.hs
thentos-core/src/Network/: HostAddr.hs
thentos-core/src/Paths/: TH.hs
thentos-core/src/Servant/: Missing.hs
thentos-core/src/Snap/: Missing.hs
thentos-core/src/System/Log/: Missing.hs
thentos-core/src/Thentos/: Action.hs  CaptchaService.hs  Config.hs  Frontend.hs  FrontendS.hs  Prelude.hs  Smtp.hs  Sybil.hs  Transaction.hs  Types.hs  Util.hs
thentos-core/src/Thentos/Action/: Core.hs  SimpleAuth.hs  SimpleCheckClearance.hs  TCB.hs  Types.hs  Unsafe.hs
thentos-core/src/Thentos/Backend/: Core.hs
thentos-core/src/Thentos/Backend/Api/: Adhocracy3.hs  Auth.hs  Captcha.hs  Proxy.hs  PureScript.hs  Purescript.hs  Simple.hs  Sso.hs  Sso.js
thentos-core/src/Thentos/Backend/Api/Auth/: Types.hs
thentos-core/src/Thentos/Backend/Api/Docs/: Common.hs  Proxy.hs  Simple.hs
thentos-core/src/Thentos/Config/: Reader.hs
thentos-core/src/Thentos/Ends/: Types.hs
thentos-core/src/Thentos/Frontend/: CSRF.hs  Errors.hs  ErrorsS.hs  Handlers.hs  HandlersS.hs  Pages.hs  Session.hs  State.hs  TH.hs  Types.hs
thentos-core/src/Thentos/Frontend/Handlers/: Combinators.hs
thentos-core/src/Thentos/Frontend/Pages/: Core.hs
thentos-core/src/Thentos/Sybil/: AudioCaptcha.hs  Captcha.hs  GraphicCaptcha.hs
thentos-core/src/Thentos/Transaction/: Core.hs  TH.hs  Transactions.hs
thentos-core/src/Thentos/Types/: Opaque.hs
thentos-core/tests/: MetaSpec.hs
thentos-core/tests/Test/: Config.hs  Core.hs  Types.hs
thentos-core/tests/Test/WebDriver/: Missing.hs
thentos-tests/: HLint.hs  Makefile  cabal.config  cabal.config-7.8.4  tests.tix  thentos-tests.cabal
thentos-tests/bench/: Main.hs
thentos-tests/src/Thentos/Test/: Arbitrary.hs  Config.hs  Core.hs  CustomDB.hs  DefaultSpec.hs  Network.hs  Transaction.hs  Types.hs  Utils.hs
thentos-tests/src/Thentos/Test/WebDriver/: Missing.hs
thentos-tests/tests/: MetaSpec.hs
thentos-tests/tests/Network/: HostAddrSpec.hs
thentos-tests/tests/Servant/: MissingSpec.hs
thentos-tests/tests/Thentos/: ActionSpec.hs  FrontendSpec.hs  TransactionSpec.hs  TypesSpec.hs  UtilSpec.hs
thentos-tests/tests/Thentos/Action/: SimpleAuthSpec.hs  SimpleCheckClearanceSpec.hs  UnsafeSpec.hs
thentos-tests/tests/Thentos/Backend/Api/: Adhocracy3Spec.hs  CaptchaSpec.hs  PureScriptSpec.hs  PurescriptSpec.hs  SimpleSpec.hs  SsoSpec.hs
thentos-tests/tests/Thentos/Frontend/: SessionSpec.hs  StateSpec.hs
thentos-tests/tests/Thentos/Frontend/Handlers/: CombinatorsSpec.hs
thentos-tests/tests/Thentos/Sybil/: CaptchaSpec.hs
thentos-tests/tests/Thentos/Transaction/: CoreSpec.hs
(+812 files in other folders)
