name:                thentos
version:             0.0.1.1
synopsis:            The swiss army knife of privacy-preserving identity management
description:
  This is an experimental platform for identity management in web
  applications, inspired by software like shibboleth and sproxy.  See
  README.md for more (if still a bit sketchy) details.
license:             AGPL-3
license-file:        LICENSE
homepage:            https://github.com/liqd/thentos
author:              Matthias Fischmann, Florian Hartwig, Christian Siefkes
maintainer:          mf@zerobuzz.net, florian.hartwig@liqd.de, christian@siefkes.net
copyright:           liquid democracy e.V. (https://liqd.net/)
category:            Authentication
build-type:          Simple
cabal-version:       >= 1.20

Source-Repository head
  type: git
  location: https://github.com/liqd/thentos

flag profiling
  default: False

flag with-thentos-executable
  default: True

flag with-build-docs-executable
  default: True

-- snap-development mode seems to have issues:
-- https://groups.google.com/forum/#!topic/snap_framework/7fWgxMxjNWE
-- https://groups.google.com/forum/#!topic/snap_framework/NnjKNYU5yeI
-- https://groups.google.com/forum/#!topic/snap_framework/A459Gt8kr0U
Flag snap-development
  Description: build the snap frontend in development (interpreted) mode
  Default: False

library
  default-language:
      Haskell2010
  hs-source-dirs:
      src
  ghc-options:
      -Wall
  if flag(profiling)
      ghc-options:
          -auto-all -caf-all -fforce-recomp
  if flag(snap-development)
    build-depends:
      snap-loader-dynamic == 0.10.*
    cpp-options: -DDEVELOPMENT -w
    ghc-options: -w
  exposed-modules:
      LIO.Missing
    , Snap.Missing
    , System.Log.Missing
    , Thentos
    , Thentos.Action
    , Thentos.Action.Core
    , Thentos.Backend.Api.Adhocracy3
    , Thentos.Backend.Api.Adhocracy3Sso
    , Thentos.Backend.Api.Auth
    , Thentos.Backend.Api.Proxy
    , Thentos.Backend.Api.Simple
    , Thentos.Backend.Api.Docs.Adhocracy3
    , Thentos.Backend.Api.Docs.Common
    , Thentos.Backend.Api.Docs.Proxy
    , Thentos.Backend.Api.Docs.Simple
    , Thentos.Backend.Core
    , Thentos.Config
    , Thentos.Frontend
    , Thentos.Frontend.Handlers
    , Thentos.Frontend.Handlers.Combinators
    , Thentos.Frontend.Pages
    , Thentos.Frontend.Types
    , Thentos.Smtp
    , Thentos.Transaction
    , Thentos.Transaction.Core
    , Thentos.Transaction.TH
    , Thentos.Transaction.Transactions
    , Thentos.Types
    , Thentos.Util
  other-modules:
      Snap.Inline
  build-depends:
      base
    , acid-state
    , aeson
    , aeson-pretty
    , aeson-utils
    , async
    , blaze-html
    , bytestring
    , case-insensitive
    , cereal
    , configifier >= 0.0.4
    , containers
    , cryptonite
    , digestive-functors
    , digestive-functors-blaze >= 0.6.0.5
    , digestive-functors-snap >= 0.6.1.1
    , either
    , email-validate >= 2.1.3
    , errors
    , filepath
    , functor-infix
    , generic-aeson
    , hoauth2 >= 0.4.8 && < 0.5
    , hslogger
    , http-client
    , http-conduit >= 2.1.5 && < 2.2
    , http-media
    , http-types
    , lens
    , lio
    , mime-mail >= 0.4.9
    , mtl
    , old-locale
    , pretty-show
    , safe
    , safecopy
    , sandi
    , scrypt
    , servant >= 0.4.1 && < 0.5
    , servant-docs >= 0.4.1 && < 0.5
    , servant-server >= 0.4.1 && < 0.5
    , snap
    , snap-core
    , snaplet-acid-state
    , snap-server
    , string-conversions
    , template-haskell
    , text
    , thyme
    , transformers
    , unordered-containers
    , uri-bytestring
    , vector-space
    , wai
    , warp

    -- these are only used by some c&p'ed snap code in Frontend.Util
    , directory
    , MonadCatchIO-transformers

executable thentos
  if flag(with-thentos-executable)
    Buildable: True
  else
    Buildable: False

  default-language:
      Haskell2010
  hs-source-dirs:
      exec
  main-is:
      Main.hs
  ghc-options:
      -Wall -threaded -rtsopts
  if flag(profiling)
      ghc-options:
          -auto-all -caf-all -fforce-recomp
  build-depends:
      base
    , thentos
  if flag(snap-development)
    build-depends:
      snap-loader-dynamic == 0.10.*
    cpp-options: -DDEVELOPMENT -w
    ghc-options: -w

executable build-docs
  if flag(with-build-docs-executable)
    Buildable: True
  else
    Buildable: False

  default-language:
      Haskell2010
  hs-source-dirs:
      exec
  main-is:
      BuildDocs.hs
  ghc-options:
      -Wall -threaded -rtsopts
  build-depends:
      base
    , thentos
    , blaze-markup
    , bytestring
    , directory
    , filepath
    , functor-infix
    , lens
    , pandoc
    , process
    , servant >= 0.4.1 && < 0.5
    , servant-docs >= 0.4.1 && < 0.5
    , servant-pandoc >= 0.4.1 && < 0.5
    , thyme

test-suite tests
  default-language:
      Haskell2010
  type:
      exitcode-stdio-1.0
  hs-source-dirs:
      tests
  main-is:
      Spec.hs
  other-modules:
      Test.Arbitrary
    , Test.Config
    , Test.Core
    , Test.CustomDB
    , Test.Types
    , Test.WebDriver.Missing
    -- (modules to be collected by hspec-discover are not to be mentioned here.)
  ghc-options:
      -Wall -threaded -rtsopts
  cpp-options:
      -DGHC_GENERICS
  build-depends:
      base
    , thentos
    , acid-state
    , aeson
    , aeson-pretty
    , async
    , attoparsec
    , bytestring
    , case-insensitive
    , cereal
    , configifier
    , containers
    , cryptonite
    , directory
    , email-validate >= 2.1.3
    , filepath
    , functor-infix
    , hslogger
    , hspec
    , http-types
    , lens
    , lifted-base
    , lio
    , mime-mail
    , mtl
    , pretty-show
    , process
    , QuickCheck
    , regex-easy
    , safecopy
    , scrypt
    , servant-server >= 0.4.1 && < 0.5
    , snap
    , snap-core
    , string-conversions
    , system-fileio
    , temporary
    , text
    , thyme
    , transformers
    , transformers-base
    , unix
    , unordered-containers
    , wai
    , wai-extra
    , webdriver

benchmark load-test
  default-language:
      Haskell2010
  type:
      exitcode-stdio-1.0
  hs-source-dirs:
      bench
  main-is:
      Main.hs
  ghc-options:
      -Wall -threaded
  build-depends:
      base
    , thentos
    , aeson
    , bytestring
    , conduit
    , http-conduit
    , http-types
    , pronk
    , random
    , resourcet
    , text
    , text-format
    , time
