name:                refresh-i18n
version:             0.1
synopsis:            Keep translation tables in web apps up to date
description:         Script for refreshing translation tables in thentos-purescript.  Shouldn't be hard to generalise.
license:             AGPL
license-file:        LICENSE
author:              Matthias Fischmann
maintainer:          mf@zerobuzz.net
copyright:           liquid democracy e.V., 2015-2017
category:            Language
build-type:          Simple
cabal-version:       >=1.10

executable refresh-i18n
  main-is:
      Main.hs
  build-depends:
      base >=4.8 && <4.9
    , containers
    , directory
    , filepath
    , functor-infix
    , process
    , string-conversions
    , text
  hs-source-dirs:
      src
  default-language:
      Haskell2010
