name:                servant-session
version:             0.5
synopsis:            A wai middleware and servant combinator for maintaining session state.
description:
  A wai middleware and servant combinator for maintaining session state.
  .
  You can learn about the basics in the <http://haskell-servant.github.io/tutorial tutorial>.
homepage:            http://haskell-servant.github.io/
Bug-reports:         http://github.com/haskell-servant/servant/issues
license:             BSD3
license-file:        LICENSE
author:              Matthias Fischmann, Julian K. Arni
maintainer:          matthias.fischmann@liqd.net
copyright:           2015 liquid democracy e.V., Germany
category:            Web
build-type:          Simple
cabal-version:       >=1.10
tested-with:         GHC >= 7.8
extra-source-files:
  CHANGELOG.md
  README.md
bug-reports:         http://github.com/haskell-servant/servant/issues
source-repository head
  type: git
  location: http://github.com/haskell-servant/servant.git


library
  exposed-modules:
    Servant.Session
  build-depends:
        base               >= 4.7  && < 5
      , bytestring         >= 0.10 && < 0.11
      , blaze-builder      >= 0.4  && < 0.5
      , http-types         >= 0.8  && < 0.9
      , servant            == 0.5.*
      , servant-server     == 0.5.*
      , wai                >= 3.0  && < 3.1
      , random             >= 1.1  && < 1.2
      , cookie             >= 0.4  && < 0.5
      , uuid               >= 1.3  && < 1.4
      , clientsession      >= 0.9  && < 0.10
      , vault
      , wai-session
  hs-source-dirs: src
  default-language: Haskell2010
  ghc-options: -Wall

test-suite spec
  type: exitcode-stdio-1.0
  ghc-options:
    -Wall -fno-warn-name-shadowing
  default-language: Haskell2010
  hs-source-dirs: test
  main-is: Spec.hs
  other-modules:
      Servant.SessionSpec
  build-depends:
      base == 4.*
    , aeson
    , cookie
    , bytestring
    , clientsession
    , containers
    , hspec == 2.*
    , hspec-wai
    , http-types
    , servant-server
    , servant-session
    , string-conversions
    , text
    , time
    , wai
    , wai-extra
    , wai-session
    , transformers
    , vault
