name:                thentos-adhocracy
version:             0.0.1
synopsis:            Thentos-binding for the adhocracy participation platform
description:
  See https://github.com/liqd/adhocracy3.mercator and https://github.com/liqd/thentos.
license:             AGPL-3
license-file:        LICENSE
homepage:            https://github.com/liqd/thentos
author:              Matthias Fischmann, Florian Hartwig, Christian Siefkes
maintainer:          mf@zerobuzz.net, florian.hartwig@liqd.de, christian@siefkes.net
copyright:           liquid democracy e.V. (https://liqd.net/)
category:            Authentication
build-type:          Simple
cabal-version:       >= 1.18

extra-source-files:
  tests/Thentos/Adhocracy3/Backend/Api/ProxySpec.hs
  tests/Thentos/Adhocracy3/Backend/Api/SimpleSpec.hs

Source-Repository head
  type: git
  location: https://github.com/liqd/thentos

flag profiling
  default: False

flag with-thentos-executable
  default: True

flag with-build-docs-executable
  default: True

library
  default-language:
      Haskell2010
  hs-source-dirs:
      src
  ghc-options:
      -Wall
  if flag(profiling)
      ghc-options:
          -auto-all -caf-all -fforce-recomp
  exposed-modules:
      Thentos.Adhocracy3
    , Thentos.Adhocracy3.Backend.Core
    , Thentos.Adhocracy3.Backend.Api.Docs.Simple
    , Thentos.Adhocracy3.Backend.Api.Simple
    , Thentos.Adhocracy3.Backend.Api.Sso
    , Thentos.Adhocracy3.Transactions
    , Thentos.Adhocracy3.Types
  build-depends:
      base
    , thentos-core
    , acid-state
    , aeson
    , aeson-pretty
    , aeson-utils
    , async
    , blaze-html
    , bytestring
    , case-insensitive
    , cereal
    , configifier >= 0.0.4
    , containers
    , cryptonite
    , digestive-functors
    , digestive-functors-blaze >= 0.6.0.5
    , digestive-functors-snap >= 0.6.1.1
    , either
    , email-validate >= 2.1.3
    , errors
    , filepath
    , functor-infix
    , generic-aeson
    , hoauth2 >= 0.4.8 && < 0.5
    , hslogger
    , http-client
    , http-conduit >= 2.1.5 && < 2.2
    , http-media
    , http-types
    , lens
    , lio
    , mime-mail >= 0.4.9
    , mtl > 2 && < 2.2
    , mtl-compat
    , old-locale
    , pretty-show
    , safe
    , safecopy
    , sandi
    , scrypt
    , servant >= 0.4.1 && < 0.5
    , servant-docs >= 0.4.1 && < 0.5
    , servant-server >= 0.4.1 && < 0.5
    , snap
    , snap-core
    , snaplet-acid-state
    , snap-server
    , string-conversions
    , template-haskell
    , text
    , thyme
    , transformers
    , unordered-containers
    , uri-bytestring
    , vector-space
    , void
    , wai
    , warp

executable thentos-adhocracy
  if flag(with-thentos-executable)
    Buildable: True
  else
    Buildable: False

  default-language:
      Haskell2010
  hs-source-dirs:
      exec
  main-is:
      Main.hs
  ghc-options:
      -Wall -threaded -rtsopts
  if flag(profiling)
      ghc-options:
          -auto-all -caf-all -fforce-recomp
  build-depends:
      base
    , thentos-core
    , thentos-adhocracy

executable build-docs
  if flag(with-build-docs-executable)
    Buildable: True
  else
    Buildable: False

  default-language:
      Haskell2010
  hs-source-dirs:
      exec
  main-is:
      BuildDocs.hs
  ghc-options:
      -Wall -threaded -rtsopts
  build-depends:
      base
    , thentos-core
    , thentos-adhocracy

test-suite tests
  default-language:
      Haskell2010
  type:
      exitcode-stdio-1.0
  hs-source-dirs:
      tests
  main-is:
      Spec.hs
  other-modules:
    -- (modules to be collected by hspec-discover are not to be mentioned here.)
  ghc-options:
      -Wall -threaded -rtsopts
  cpp-options:
      -DGHC_GENERICS
  build-depends:
      base
    , thentos-core
    , thentos-tests
    , thentos-adhocracy
    , acid-state
    , aeson
    , aeson-pretty
    , async
    , attoparsec
    , bytestring
    , case-insensitive
    , cereal
    , configifier
    , containers
    , cryptonite
    , directory
    , email-validate
    , filepath
    , functor-infix
    , hslogger
    , hspec
    , hspec-wai
    , http-types
    , http-client
    , HTTP
    , lens
    , lens-aeson
    , lifted-base
    , lio
    , mime-mail
    , mtl
    , network
    , pretty-show
    , process
    , QuickCheck
    , regex-easy
    , safecopy
    , scrypt
    , servant-server
    , snap
    , snap-core
    , string-conversions
    , system-fileio
    , temporary
    , text
    , thyme
    , transformers
    , transformers-base
    , unix
    , unordered-containers
    , wai
    , wai-extra
    , warp
    , webdriver
    , wreq
