name:                thentos-adhocracy
version:             0.0.1.1
synopsis:            Thentos-binding for the adhocracy participation platform
description:
  See https://github.com/liqd/adhocracy3.mercator and https://github.com/liqd/thentos.
license:             AGPL-3
license-file:        LICENSE
homepage:            https://github.com/liqd/thentos
author:              Matthias Fischmann, Florian Hartwig, Christian Siefkes
maintainer:          mf@zerobuzz.net, florian.hartwig@liqd.de, christian@siefkes.net
copyright:           liquid democracy e.V. (https://liqd.net/)
category:            Authentication
build-type:          Simple
cabal-version:       >= 1.18

extra-source-files:
  tests/Thentos/Adhocracy3/Backend/Api/ProxySpec.hs
  tests/Thentos/Adhocracy3/Backend/Api/SimpleSpec.hs

Source-Repository head
  type: git
  location: https://github.com/liqd/thentos

flag profiling
  default: False

flag with-thentos-executable
  default: True

flag with-build-docs-executable
  default: True

library
  default-language:
      Haskell2010
  hs-source-dirs:
      src
  ghc-options:
      -Wall -j1
  if flag(profiling)
      ghc-options:
          -auto-all -caf-all -fforce-recomp
  exposed-modules:
      Thentos.Adhocracy3
    , Thentos.Adhocracy3.Backend.Core
    , Thentos.Adhocracy3.Backend.Api.Docs.Simple
    , Thentos.Adhocracy3.Backend.Api.Simple
    , Thentos.Adhocracy3.Backend.Api.Sso
    , Thentos.Adhocracy3.Transactions
    , Thentos.Adhocracy3.Types
  build-depends:
    -- losely based on: https://www.stackage.org/lts-3.5/cabal.config
      aeson >=0.8.0.2 && <0.9
    , aeson-pretty >=0.7.2 && <0.8
    , aeson-utils >=0.3.0.2 && <0.4
    , async >=2.0.2 && <2.1
    , base >=4.8.1.0 && <5
    , blaze-html >=0.8.1.0 && <0.9
    , bytestring >=0.10.6.0 && <0.11
    , case-insensitive >=1.2.0.4 && <1.3
    , cereal >=0.4.1.1 && <0.5
    , configifier >=0.0.5 && <0.1
    , containers >=0.5.6.2 && <0.6
    , cryptonite >=0.6 && <0.7
    , digestive-functors >=0.8.0.0 && <0.9
    , digestive-functors-blaze >=0.6.0.6 && <0.7
    , digestive-functors-snap >=0.6.1.3 && <0.7
    , either >=4.4.1 && <4.5
    , email-validate >=2.1.3 && <2.2
    , errors >=2.0.0 && <2.1
    , filepath >=1.4.0.0 && <1.5
    , functor-infix >=0.0.3 && <0.1
    , generic-aeson >=0.2.0.7 && <0.3
    , hoauth2 >=0.4.8 && <0.5
    , hslogger >=1.2.9 && <1.3
    , http-client >=0.4.22 && <0.5
    , http-conduit >=2.1.8 && <2.2
    , http-media >=0.6.2 && <0.7
    , http-types >=0.8.6 && <0.9
    , lens >=4.12.3 && <4.13
    , lio >=0.11.5.0 && <0.12
    , mime-mail >=0.4.10 && <0.5
    , mtl >=2.2.1 && <2.3
    , mtl-compat >=0.2.1.3 && <0.3
    , old-locale >=1.0.0.7 && <1.1
    , pretty-show >=1.6.8.2 && <1.7
    , safe >=0.3.9 && <0.4
    , safecopy >=0.8.5 && <0.9
    , sandi >=0.3.5 && <0.4
    , scrypt >=0.5.0 && <0.6
    , servant ==0.5
    , servant-docs ==0.5
    , servant-server ==0.5
    , snap >=0.14.0.6 && <0.15
    , snap-core >=0.9.8.0 && <0.10
    , snap-server >=0.9.5.1 && <0.10
    , string-conversions >=0.4 && <0.5
    , template-haskell >=2.10.0.0 && <2.11
    , text >=1.2.1.3 && <1.3
    , thentos-core >=0.0.1.1 && <0.1
    , thyme >=0.3.5.5 && <0.4
    , transformers >=0.4.2.0 && <0.5
    , unordered-containers >=0.2.5.1 && <0.3
    , uri-bytestring >=0.1.8 && <0.2
    , vector-space >=0.10.2 && <0.11
    , wai >=3.0.3.0 && <3.1
    , warp >=3.1.3 && <3.2

executable thentos-adhocracy
  if flag(with-thentos-executable)
    Buildable: True
  else
    Buildable: False

  default-language:
      Haskell2010
  hs-source-dirs:
      exec
  main-is:
      Main.hs
  ghc-options:
      -Wall -j1 -threaded -rtsopts -with-rtsopts=-N
  if flag(profiling)
      ghc-options:
          -auto-all -caf-all -fforce-recomp
  build-depends:
      base
    , thentos-core
    , thentos-adhocracy

executable build-docs
  if flag(with-build-docs-executable)
    Buildable: True
  else
    Buildable: False

  default-language:
      Haskell2010
  hs-source-dirs:
      exec
  main-is:
      BuildDocs.hs
  ghc-options:
      -Wall -j1 -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base
    , thentos-core
    , thentos-adhocracy

test-suite tests
  default-language:
      Haskell2010
  type:
      exitcode-stdio-1.0
  hs-source-dirs:
      tests
  main-is:
      Spec.hs
  other-modules:
    -- (modules to be collected by hspec-discover are not to be mentioned here.)
  ghc-options:
      -Wall -j1 -threaded -rtsopts -with-rtsopts=-N
  cpp-options:
      -DGHC_GENERICS
  build-depends:
      aeson >=0.8.0.2 && <0.9
    , aeson-pretty >=0.7.2 && <0.8
    , async >=2.0.2 && <2.1
    , attoparsec >=0.12.1.6 && <0.14
    , base >=4.8.1.0 && <5
    , bytestring >=0.10.6.0 && <0.11
    , case-insensitive >=1.2.0.4 && <1.3
    , cereal >=0.4.1.1 && <0.5
    , configifier >=0.0.5 && <0.1
    , containers >=0.5.6.2 && <0.6
    , cryptonite >=0.6 && <0.7
    , directory >=1.2.2.0 && <1.3
    , email-validate >=2.1.3 && <2.2
    , filepath >=1.4.0.0 && <1.5
    , functor-infix >=0.0.3 && <0.1
    , hslogger >=1.2.9 && <1.3
    , hspec >=2.1.10 && <2.3
    , hspec-wai >=0.6.3 && <0.7
    , HTTP >=4000.2.20 && <4000.3
    , http-client >=0.4.22 && <0.5
    , http-types >=0.8.6 && <0.9
    , lens >=4.12.3 && <4.13
    , lens-aeson >=1.0.0.4 && <1.1
    , lifted-base >=0.2.3.6 && <0.3
    , lio >=0.11.5.0 && <0.12
    , mime-mail >=0.4.10 && <0.5
    , mtl >=2.2.1 && <2.3
    , network >=2.6.2.1 && <2.7
    , pretty-show >=1.6.8.2 && <1.7
    , process >=1.2.3.0 && <1.3
    , QuickCheck >=2.8.1 && <2.9
    , regex-easy >=0.1.0.0 && <0.2
    , resource-pool >=0.2.3.2 && <0.3
    , safecopy >=0.8.5 && <0.9
    , scrypt >=0.5.0 && <0.6
    , servant-server ==0.5
    , snap >=0.14.0.6 && <0.15
    , snap-core >=0.9.8.0 && <0.10
    , string-conversions >=0.4 && <0.5
    , system-fileio >=0.3.16.3 && <0.4
    , temporary >=1.2.0.3 && <1.3
    , text >=1.2.1.3 && <1.3
    , thentos-adhocracy >=0.0.1.1 && <0.1
    , thentos-core >=0.0.1.1 && <0.1
    , thentos-tests >=0.0.1.1 && <0.1
    , thyme >=0.3.5.5 && <0.4
    , transformers >=0.4.2.0 && <0.5
    , transformers-base >=0.4.4 && <0.5
    , unix >=2.7.1.0 && <2.8
    , unordered-containers >=0.2.5.1 && <0.3
    , wai >=3.0.3.0 && <3.1
    , wai-extra >=3.0.10 && <3.1
    , warp >=3.1.3 && <3.2
    , webdriver >=0.6.2.1 && <0.7
    , wreq >=0.4.0.0 && <0.5
