name:                thentos-adhocracy
version:             0.6.0
synopsis:            Thentos-binding for the adhocracy participation platform
description:
  See https://github.com/liqd/adhocracy3.mercator and https://github.com/liqd/thentos.
license:             AGPL
license-file:        LICENSE
homepage:            https://github.com/liqd/thentos
author:              Matthias Fischmann, Florian Hartwig, Christian Siefkes
maintainer:          mf@zerobuzz.net, florian.hartwig@liqd.de, christian@siefkes.net
copyright:           liquid democracy e.V. (https://liqd.net/)
category:            Authentication
build-type:          Simple
cabal-version:       >= 1.18

Source-Repository head
  type: git
  location: https://github.com/liqd/thentos

flag profiling
  default: False

flag with-thentos-executable
  default: True

library
  default-language:
      Haskell2010
  hs-source-dirs:
      src
  ghc-options:
      -Wall -j1
  if flag(profiling)
      ghc-options:
          -auto-all -caf-all -fforce-recomp
  exposed-modules:
      Thentos.Adhocracy3
    , Thentos.Adhocracy3.Action
    , Thentos.Adhocracy3.Action.Types
    , Thentos.Adhocracy3.Action.Unsafe
    , Thentos.Adhocracy3.Backend.Api.Simple
    , Thentos.Adhocracy3.Backend.Core
  other-modules:
      Paths_thentos_adhocracy
  build-depends:
    -- losely based on: https://www.stackage.org/lts-3.5/cabal.config
      aeson >=0.8.0.2 && <0.9
    , aeson-pretty >=0.7.2 && <0.8
    , base >=4.8.1.0 && <5
    , case-insensitive >=1.2.0.4 && <1.3
    , configifier >=0.1.0 && <0.2
    , functor-infix >=0.0.3 && <0.1
    , hslogger >=1.2.9 && <1.3
    , http-client >=0.4.22 && <0.5
    , http-conduit >=2.1.8 && <2.2
    , http-types >=0.8.6 && <0.9
    , lens >=4.12.3 && <4.13
    , lio >=0.11.5.0 && <0.12
    , mtl >=2.2.1 && <2.3
    , network >=2.6.2.1 && <2.7
    , network-uri >=2.6 && <2.7
    , pretty-show >=1.6.8.2 && <1.7
    , safe >=0.3.9 && <0.4
    , servant >=0.5
    , servant-docs >=0.5
    , servant-server >=0.5
    , string-conversions >=0.4 && <0.5
    , text >=1.2.1.3 && <1.3
    , thentos-core ==0.6.0
    , thyme >=0.3.5.5 && <0.4
    , unordered-containers >=0.2.5.1 && <0.3
    , uri-bytestring >=0.1.8 && <0.2
    , wai >=3.0.3.0 && <3.1

executable thentos-adhocracy
  if flag(with-thentos-executable)
    Buildable: True
  else
    Buildable: False

  default-language:
      Haskell2010
  hs-source-dirs:
      exec
  main-is:
      Main.hs
  ghc-options:
      -Wall -j1 -threaded -rtsopts -with-rtsopts=-N
  if flag(profiling)
      ghc-options:
          -auto-all -caf-all -fforce-recomp
  build-depends:
      base
    , thentos-adhocracy

test-suite tests
  default-language:
      Haskell2010
  type:
      exitcode-stdio-1.0
  hs-source-dirs:
      tests
  main-is:
      Spec.hs
  other-modules:
    -- (modules to be collected by hspec-discover are not to be mentioned here.)
  ghc-options:
      -Wall -j1 -threaded -rtsopts -with-rtsopts=-N
  cpp-options:
      -DGHC_GENERICS
  build-depends:
      aeson >=0.8.0.2 && <0.9
    , aeson-pretty >=0.7.2 && <0.8
    , async >=2.0.2 && <2.1
    , base >=4.8.1.0 && <5
    , bytestring >=0.10.6.0 && <0.11
    , case-insensitive >=1.2.0.4 && <1.3
    , configifier
    , containers >=0.5.6.2 && <0.6
    , filepath >=1.4.0.0 && <1.5
    , hspec >=2.1.10 && <2.3
    , hspec-wai >=0.6.3 && <0.7
    , HTTP >=4000.2.20 && <4000.3
    , http-client >=0.4.22 && <0.5
    , http-types >=0.8.6 && <0.9
    , lens >=4.12.3 && <4.13
    , lens-aeson >=1.0.0.4 && <1.1
    , lio >=0.11.5.0 && <0.12
    , network >=2.6.2.1 && <2.7
    , process >=1.2.3.0 && <1.3
    , QuickCheck >=2.8.1 && <2.9
    , resource-pool >=0.2.3.2 && <0.3
    , string-conversions >=0.4 && <0.5
    , text >=1.2.1.3 && <1.3
    , thentos-adhocracy ==0.6.0
    , thentos-core ==0.6.0
    , thentos-tests ==0.6.0
    , transformers >=0.4.2.0 && <0.5
    , wai >=3.0.3.0 && <3.1
    , wai-extra >=3.0.10 && <3.1
    , warp >=3.1.3 && <3.2
    , wreq >=0.4.0.0 && <0.5
